# gribtract

./: .gitignore  .needle-predispatch-sha  Cargo.toml  README.md  test_golden_format.py  verify_grib2.py  wgrib2_hrrr_verification.txt  wgrib2_nam_verification.txt
.beads/: beads.db.backup.20260702115559  beads.db.backup.20260702121401  beads.db.backup.20260702144439  beads.db.backup.20260703111759  beads.db.backup.20260703113250  beads.db.backup.20260703115104  beads.db.backup.20260709034037  beads.db.backup.20260709034841  issues.jsonl
.beads/traces/bf-11k8/: metadata.json  stdout.txt  trace.jsonl
.beads/traces/bf-1ot3/: metadata.json  stdout.txt  trace.jsonl
.beads/traces/bf-1pyo/: metadata.json  stdout.txt
.beads/traces/bf-1uqf/: metadata.json  stderr.txt  stdout.txt
.beads/traces/bf-1z3c/: metadata.json  stdout.txt  trace.jsonl
.beads/traces/bf-2kqw/: documentation_validation_report.md
.beads/traces/bf-2o53/: metadata.json  stdout.txt  trace.jsonl
.beads/traces/bf-2puf/: metadata.json  stdout.txt  trace.jsonl
.beads/traces/bf-2r2q/: metadata.json  stdout.txt  trace.jsonl
.beads/traces/bf-2xen/: metadata.json  stderr.txt  stdout.txt
.beads/traces/bf-3fh6/: metadata.json  stdout.txt  trace.jsonl
.beads/traces/bf-3thh/: metadata.json  stdout.txt  trace.jsonl
.beads/traces/bf-3w1z/: metadata.json  stdout.txt  trace.jsonl
.beads/traces/bf-45h5/: metadata.json  stdout.txt  trace.jsonl
.beads/traces/bf-48jz/: metadata.json  stdout.txt  trace.jsonl
.beads/traces/bf-4jpf/: drt2_inspection.txt  drt_inspection_report.md  metadata.json  stderr.txt  stdout.txt
.beads/traces/bf-5c42/: metadata.json  stderr.txt  stdout.txt  trace.jsonl
.beads/traces/bf-5gsm/: metadata.json  stdout.txt  trace.jsonl
.beads/traces/bf-5jxt/: metadata.json  stdout.txt  trace.jsonl
.beads/traces/bf-6bxh/: metadata.json
.beads/traces/bf-tnue/: gdt_inspection_summary.md  metadata.json  stderr.txt  stdout.txt  wgrib2_gdt_inspection.txt
.beads/traces/bf-we8d/: metadata.json  stderr.txt  stdout.txt
.marathon/: instruction.md  start.sh
crates/gribtract/: Cargo.toml  README.md
crates/gribtract-cli/: Cargo.toml
crates/gribtract-cli/src/: main.rs
crates/gribtract-core/: Cargo.toml  README.md
crates/gribtract-core/src/: decode.rs  error.rs  lib.rs  section.rs  types.rs
crates/gribtract-fetch/: Cargo.toml  README.md
crates/gribtract-fetch/src/: client.rs  error.rs  lib.rs  probe.rs  provider.rs
crates/gribtract-py/: Cargo.toml  pyproject.toml
crates/gribtract-py/src/: lib.rs
crates/gribtract-testutil/: Cargo.toml
crates/gribtract-testutil/src/: corpus.rs  diff.rs  golden.rs  lib.rs
crates/gribtract/src/: lib.rs  provider_probe.rs  timeseries.rs
crates/gribtract/tests/: differential.rs  station_extraction.rs
docs/: bf-1u16.md  bf-3lh2-test-results.md  bf-tnue-gdt-inspection.txt  bf-tnue_nam_awip12_gdt_summary.md  gdt_inspection_bf-tnue.md  golden-json-schema.md  hrrr_gdt_full_inspection.txt  wgrib2_grid_inspection_bf-1wy7.txt
docs/notes/: oracle-and-tolerance.md  parse-speed-log.md  publish-guide.md  station-extraction-benchmark.md  throughput-dashboard.md
docs/plan/: plan.md
docs/research/: bf-13e3-noaa-gdt330-drt3-urls.md  bf-1fe5-drt3-verified-files.md  bf-1moz-noaa-model-file-sizes-and-schedules.md  bf-1ot3-gdt330-candidate-archive-urls.md  bf-2r5b-gdt330-drt3-candidate-files.md  bf-363b-noaa-regional-model-archives.md  bf-37db-lambert-drt3-candidates.md  bf-45h5-grib2-verification-results.md  bf-4dli-noaa-archive-urls-verification.md  bf-5ff3-noaa-archive-access-patterns.md  bf-5gsm-noaa-url-patterns.md  bf-67ah-grib2-verification-reference.md  grib2-structure.md  noaa-archive-urls.md  noaa-regional-model-archives.md  noaa-regional-model-grib2-archives.md
notes/: bf-13e3.md  bf-1dd2.md  bf-1fe5.md  bf-1ot3.md  bf-1pyo.md  bf-1uqf.md  bf-1wwi.md  bf-22pu.md  bf-2brx.md  bf-2hlq.md  bf-2o53.md  bf-2p57.md  bf-2r5b.md  bf-2xen.md  bf-2z0x.md  bf-32aw.md  bf-37db.md  bf-37kc.md  bf-3edr-verification-evidence-summary.md  bf-3fh6.md  bf-3l2y.md  bf-3ogm.md  bf-3sbu.md  bf-3shs.md  bf-3tfg.md  bf-3thh.md  bf-3w1z.md  bf-414g.md  bf-45h5.md  bf-48jz.md  bf-4dli.md  bf-4hm1.md  bf-4jew.md  bf-4umq.md  bf-546k.md  bf-547p.md  bf-54zg.md  bf-5c42.md  bf-5ff3.md  bf-5gsm.md  (+17 more)
samples/: bf-2rku-download-record.md  bf-i5ol-nam-awip12-provenance.md
scripts/: gen_golden.py  gen_golden.py.backup  gen_golden_cli.py  gen_golden_fixed.py  gen_grib2.py  gen_grib2_drt2.py  gen_grib2_drt40.py  gen_grib2_drt41.py  gen_grib2_pdt1.py  gen_grib2_pdt8.py
tests/corpus/: manifest.json
tests/corpus/golden/: drt2_simple_3x3.json  drt40_j2k_3x2.json  drt41_png_3x2.json  gfs_anl_t2m_5x5.json  gfs_tmp2m_1deg_anl.json  pdt1_ensemble_3x2.json  pdt8_accum_3x2.json
tests/corpus/small/: drt2_simple_3x3.grib2  drt40_j2k_3x2.grib2  drt41_png_3x2.grib2  gfs_anl_t2m_5x5.grib2  gfs_tmp2m_1deg_anl.grib2  gfswave_arctic_wind_drt40.grib2  mrms_carib_refl_drt41.grib2  pdt1_ensemble_3x2.grib2  pdt8_accum_3x2.grib2
xtask/: Cargo.toml
xtask/src/: bench.rs  bench_station.rs  corpus.rs  dashboard_template.html  main.rs  probe_providers.rs  serve.rs
