[workspace]
members = [
    "crates/gribtract-core",
    "crates/gribtract",
    "crates/gribtract-cli",
    "xtask",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jedarden/gribtract"
rust-version = "1.75"

[workspace.dependencies]
gribtract-core = { path = "crates/gribtract-core" }
gribtract = { path = "crates/gribtract" }

[profile.release]
opt-level = 3
lto = "thin"
