[workspace]
members = [
    "crates/gribtract-core",
    "crates/gribtract",
    "crates/gribtract-cli",
    "crates/gribtract-testutil",
    "xtask",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jedarden/gribtract"
rust-version = "1.75"

[workspace.dependencies]
gribtract-core = { path = "crates/gribtract-core", version = "0.1.0" }
gribtract = { path = "crates/gribtract", version = "0.1.0" }
gribtract-testutil = { path = "crates/gribtract-testutil", version = "0.1.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"

[profile.release]
opt-level = 3
lto = "thin"
