[package]
name = "xtask"
description = "Build/bench/corpus management tasks for gribtract"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
gribtract = { path = "../crates/gribtract" }
gribtract-testutil = { path = "../crates/gribtract-testutil" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
ureq = { version = "2", features = ["tls"] }
