[package]
name = "gribtract-cli"
description = "CLI for gribtract: decode, list, dump GRIB2 files as JSON/CSV"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["grib2", "grib", "weather", "noaa", "cli"]
categories = ["command-line-utilities", "science"]

[[bin]]
name = "gribtract"
path = "src/main.rs"

[dependencies]
gribtract = { workspace = true, default-features = false }
clap = { version = "4.5", features = ["derive"] }
serde_json = { workspace = true }
anyhow = "1.0"

[features]
jpeg2000 = ["gribtract/jpeg2000"]
