[package]
name = "gribtract-core"
description = "Low-level GRIB2 section parser and template decoders — no_std-friendly"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["grib2", "grib", "weather", "noaa", "decoder"]
categories = ["parser-implementations", "science", "encoding"]
readme = "README.md"

[dependencies]
jpeg2k = { version = "0.10", default-features = false, features = ["openjpeg-sys"], optional = true }
png = "0.18"

[features]
default = []
jpeg2000 = ["jpeg2k"]

[dev-dependencies]
