[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "gribtract"
version = "0.1.0"
description = "Python bindings for gribtract — pure-Rust GRIB2 decoder"
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }
requires-python = ">=3.8"

[tool.maturin]
module-name = "gribtract"
features = ["pyo3/extension-module"]
