[package]
name = "gribtract-testutil"
description = "Test utilities for the gribtract workspace: corpus loader, fixture helpers"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
